--- a/flux-plugin/package.json
+++ b/flux-plugin/package.json
@@ -44,6 +44,7 @@
     "material-react-table": "^2.13.1",
     "notistack": "^3.0.1",
     "react-svg": "^16.1.34",
-    "web-worker": "^1.3.0"
+    "web-worker": "^1.3.0",
+    "yaml": "^2.5.0"
   }
 }
